--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -1,1 +1,45 @@
-﻿<h1>Login</h1>
+﻿<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Login Page</title>
+</head>
+<body>
+    <div class="container mt-15">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header" style="background-color:tomato;display:flex;justify-content:space-between">
+                        <h3 style="color:#fff">LOGIN IN</h3>
+                        <div style="font-size:15px;font-weight:800">❌</div>
+                    </div>
+                    <div class="card-body">
+                        <form action="/" method="post">
+                            <div class="mb-3">
+                                <input type="text" placeholder="Enter Your Mobile No" class="form-control" />
+                            </div>
+                            <button style="background-color:tomato;color:#fff;" class="btn w-100">Send One Time Password</button>
+                            <p class="text-center mt-5" style="font-weight:800">OR</p>
+                            <div class="card-body">
+                                <button class="btn w-100 text-white" style="background-color:tomato">Continue With  Email</button>
+                            </div>
+                            <div class="card-body" style="display:flex;justify-content:space-between">
+                                <div>
+                                    Sign In As kevinprajapati123@gmail.com
+                                    keyurprajapati123@gmail.com
+                                </div>
+                                <div>
+                                    Google Logo
+                                </div>
+                            </div>
+                        </form>
+                        <hr />
+                        <p style="font-size:15px;font-weight:800;">New To Foodie ? <a href="#" style="color:blue">create Account</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
