--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -44,7 +44,7 @@
         <a asp-controller="Category" asp-action="Index"><i class="fa-solid fa-list"></i> Add Category</a> *@
         <a asp-controller="RawMaterial" asp-action="RawMaterial"><i class="fa-solid fa-industry"></i></a>
         <a asp-controller="ProductAttribute" asp-action="ProductAttribute"><i class="fa-solid fa-tags"></i> Home</a>
-        <a asp-controller="Product" asp-action="Products"><i class="fa-solid fa-box"></i> Add Restaurant</a>
+        <a asp-controller="Addrestaurant" asp-action="AddRes"><i class="fa-solid fa-box"></i> Add Restaurant</a>
         <a asp-controller="Production" asp-action="Index"><i class="fa-solid fa-gears"></i> Orders</a>
         <a asp-controller="PurchaseOrder" asp-action="Index"><i class="fa-solid fa-file-invoice"></i> Analytics</a>
         <a asp-controller="QualityControl" asp-action="Index"><i class="fa-solid fa-shield"></i> Quality Control</a>
