--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -50,7 +50,7 @@
         <a asp-controller="QualityControl" asp-action="Index"><i class="fa-solid fa-shield"></i> Quality Control</a>
         <a asp-controller="ManufacturingCost" asp-action="Index"><i class="fa-solid fa-dollar-sign"></i>Manufacturing</a>
         <a asp-controller="Supplier" asp-action="Index"><i class="fa-solid fa-truck"></i> Notification</a>
-     
+        <a asp-controller="SupplierShipment" asp-action="Index"><i class="fa-solid fa-truck-fast"></i> Integration</a>
         <a asp-controller="Account" asp-action="Logout"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
     </div>
 
