--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -35,7 +35,7 @@
                             </div>
                         </form>
                         <hr />
-                        <p style="font-size:15px;font-weight:800;">New To Foodie ? <a href="#" style="color:blue">create Account</a></p>
+                        <p style="font-size:15px;font-weight:800;">New To Foodie ? <a asp-area="" asp-controller="Register" asp-action="CustomerRegister" style="color:blue">create Account</a></p>
                     </div>
                 </div>
             </div>
