--- a/Views/Register/CustomerRegister.cshtml
+++ b/Views/Register/CustomerRegister.cshtml
@@ -15,7 +15,31 @@
                         <div style="font-size:15px;font-weight:800">❌</div>
                     </div>
                     <div class="card-body">
-                       
+                      <form action="/" method="post">
+                            <div class="mb-3">
+                                <input type="text" name="full_name" class="form-control" placeholder="Full Name" />
+                            </div>
+                            <div class="mb-3">
+                                <input type="email" name="email" class="form-control" placeholder="Email" />
+                            </div>
+                            <div class="mb-3 d-flex justify-content-between">
+                                <input type="checkbox" />
+                                <p>I agree to Zomato's Terms of Service, Privacy Policy and Content Policies</p>
+                            </div>
+                            <div class="card-body">
+                                <button class="btn w-100 text-white" style="background-color:darkgray">Create An Account</button>
+                            </div>
+                            <p class="text-center" style="font-weight:800">OR</p>
+                            <div class="card-body" style="display:flex;justify-content:space-between">
+                                <div>
+                                    Sign In As kevinprajapati123@gmail.com
+                                    keyurprajapati123@gmail.com
+                                </div>
+                                <div>
+                                    Google Logo
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
